--- a/index.html
+++ b/index.html
@@ -222,9 +222,12 @@
                     <a href="https://blog.csdn.net/java_wxid/article/details/125103890"><span>SQL优化、索引失效的几种情况、FIC、OnlineDDL</span></a>、
                     <a href="https://blog.csdn.net/java_wxid/article/details/125104469"><span>聚集索引、辅助索引、覆盖索引、联合索引、filesort过程</span></a>、
                     <a href="https://blog.csdn.net/java_wxid/article/details/125104797"><span>离散读、ICP优化、全文检索</span></a>、
-                    、行级锁及其算法、意向锁、死锁、乐观锁、悲观锁、一致性非锁定读（MVCC原理）、
+                    行级锁及其算法、意向锁、死锁、乐观锁、悲观锁、一致性非锁定读（MVCC原理）、
                     <a href="https://blog.csdn.net/java_wxid/article/details/125104797"><span>主键自增长实现原理</span></a>、
-                    事务隔离级别、重做日志刷盘策略、分布式事务、SQL的执行流程、主从复制、存储引擎、分库分表、读写分离、四大属性的底层实现原理、BufferPool缓存机制、有MySQL调优经验。</span></li>
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125104797"><span>主从复制</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125104797"><span>SQL的执行流程</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125106468"><span>分布式事务</span></a>、
+                    事务隔离级别、重做日志刷盘策略、存储引擎、分库分表、读写分离、四大属性的底层实现原理、BufferPool缓存机制、有MySQL调优经验。</span></li>
                 <li><span>深入理解Redis：多路复用、简单字符串、链表、字典、跳跃表、整数集合、压缩列表、回收机制、线程模型、分布式寻址算法、过期策略、内存淘汰策略、各版本之间的区别、数据一致性、多级缓存架构、热点数据缓存、并发竞争、哨兵模式、主从复制、集群模式等。具有集群架构及高可用相关经验、熟悉各种缓存高并发的使用场景如：热点缓存重构、缓存雪崩、 缓存穿透、缓存失效。</span></li>
 
                 <li><span>熟悉掌握
