--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <a href="https://blog.csdn.net/java_wxid/article/details/125108197"><span>ACID底层实现原理、一致性非锁定读（MVCC的原理）、重做日志刷盘策略、隔离级别</span></a>、
                     <a href="https://blog.csdn.net/java_wxid/article/details/125108548"><span>Innodb 和mylsam存储引擎</span></a>、
                     分库分表、读写分离、BufferPool缓存机制、
-                    有<a href="https://blog.csdn.net/java_wxid/article/details/125108197"><span>MySQL调优、高可用</span></a>、
+                    有<a href="https://blog.csdn.net/java_wxid/article/details/125108197"><span>MySQL调优、高可用</span></a>
                     经验。</span></li>
                 <li><span>深入理解Redis：多路复用、简单字符串、链表、字典、跳跃表、整数集合、压缩列表、回收机制、线程模型、分布式寻址算法、过期策略、内存淘汰策略、各版本之间的区别、数据一致性、多级缓存架构、热点数据缓存、并发竞争、哨兵模式、主从复制、集群模式等。具有集群架构及高可用相关经验、熟悉各种缓存高并发的使用场景如：热点缓存重构、缓存雪崩、 缓存穿透、缓存失效。</span></li>
 
