--- a/index.html
+++ b/index.html
@@ -232,7 +232,17 @@
                     <a href="https://blog.csdn.net/java_wxid/article/details/125108548"><span>Innodb 和mylsam存储引擎</span></a>、
                     有<a href="https://blog.csdn.net/java_wxid/article/details/125108439"><span>MySQL调优、分库分表、读写分离、高可用</span></a>
                     经验。</span></li>
-                <li><span>深入理解Redis：多路复用、简单字符串、链表、字典、跳跃表、整数集合、压缩列表、回收机制、线程模型、分布式寻址算法、过期策略、内存淘汰策略、各版本之间的区别、数据一致性、多级缓存架构、热点数据缓存、并发竞争、哨兵模式、主从复制、集群模式等。具有集群架构及高可用相关经验、熟悉各种缓存高并发的使用场景如：热点缓存重构、缓存雪崩、 缓存穿透、缓存失效。</span></li>
+                <li><span>
+                    深入理解Redis：
+                    <a href="https://blog.csdn.net/java_wxid/article/details/122448534">
+                        <span>
+                            多路复用模式、单线程模型、简单字符串、链表、字典、跳跃表、压缩列表、encoding属性编码、持久化、布隆过滤器、分布式寻址算法、过期策略、内存淘汰策略
+                            、Redis与数据库的数据一致性、Redis分布式锁、热点数据缓存、哨兵模式、集群模式、多级缓存架构、并发竞争、主从架构等。
+                            具有集群架构及高可用相关经验、熟悉各种缓存高并发的使用场景如：缓存雪崩、 缓存穿透、缓存失效。
+                        </span>
+                    </a>
+                    </span>
+                </li>
 
                 <li><span>熟悉掌握
                     <a href="https://liaozhiwei.blog.csdn.net/article/details/121462512"><span>RabbitMQ</span></a>、
@@ -318,7 +328,7 @@
 
 <footer class="footer">
     <p>© 2017 廖志伟.文档最后更新时间为
-        <time>2022年6月15日</time>.</p>
+        <time>2022年5月15日</time>.</p>
 </footer>
 
 <!-- 侧栏 -->
