--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>个人简介</h2>
             <hr/>
             <ul>
-                <li><span>我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、马克Java社区讲师、幕后大佬社区创始人、开源导航贡献者、B站UP主。拥有多年一线研发经验，参与并主导过多个百万级并发的互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、 ElasticSearch全文搜索、 MongoDB非关系型数据库、分库分表ShardingSphere。 </span></li>
+                <li><span>我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、马克Java社区讲师、幕后大佬社区创始人、开源导航贡献者、B站UP主。拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、 ElasticSearch全文搜索、 MongoDB非关系型数据库、分库分表ShardingSphere。 </span></li>
             </ul>
         </section>
 
