--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- 个人肖像 -->
         <section class="me">
             <!-- 头像照片 -->
-            <img class="avatar" width="150px" height="150px" src="https://qa-community-1306449944.cos.ap-guangzhou.myqcloud.com/5c05ee65-68ee-4513-a38d-75560d5a9383.png">
+            <img class="avatar" width="150px" height="150px" src="./本人.jpg">
             <h1 class="name">廖志伟</h1>
             <h4 class="info-job">Java / 上海</h4>
 
