--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <section class="qrcode info-unit">
             <h2><i class="fa fa-qrcode" aria-hidden="true"></i>自媒体矩阵</h2>
             <a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
+            <a href="https://gitee.com/java_wxid/java_wxid"><span>点击【项目】</span></a><br />
             <a href="https://bbs.csdn.net/forums/liaozhiwei"><span>点击【社区】</span></a><br />
             <a href="https://www.yuque.com/java_wxid"><span>点击【语雀】</span></a><br />
             <a href="https://gitee.com/java_wxid"><span>点击【码云】</span></a><br />
