--- a/index.html
+++ b/index.html
@@ -140,42 +140,42 @@
 
         <section class="qrcode info-unit">
             <h2><i class="fa fa-qrcode" aria-hidden="true"></i>自媒体矩阵</h2>
-            <a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
-            <a href="https://gitee.com/java_wxid/java_wxid"><span>点击【项目】</span></a><br />
-            <a href="https://bbs.csdn.net/forums/liaozhiwei"><span>点击【社区】</span></a><br />
-            <a href="https://www.yuque.com/java_wxid"><span>点击【语雀】</span></a><br />
-            <a href="https://gitee.com/java_wxid"><span>点击【码云】</span></a><br />
-            <a href="https://www.zhihu.com/people/java_wxid"><span>点击【知乎】</span></a><br />
-            <a href="https://segmentfault.com/u/java_wxid"><span>点击【思否】</span></a><br />
-            <a href="https://www.jianshu.com/u/291aeb531f8b"><span>点击【简书】</span></a><br />
-            <a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />
-            <a href="https://www.douyin.com/user/MS4wLjABAAAAymuW4SDeeylSFzL8oUMvVn50FY4X37UOeUBJB27dcv0"><span>点击【抖音】</span></a><br />
-            <a href="https://blog.csdn.net/Java_programmer_liao"><span>点击【CSDN】</span></a><br />
-            <a href="https://cloud.tencent.com/developer/user/5598481"><span>点击【腾讯云】</span></a><br />
-            <a href="https://developer.aliyun.com/profile/yt5hnoa7p5vi2"><span>点击【阿里云】</span></a><br />
-            <a href="https://bbs.huaweicloud.com/community/usersnew/id_1640920880921267"><span>点击【华为云】</span></a><br />
-            <a href="https://www.cnblogs.com/liaozhiwei/"><span>点击【博客园】</span></a><br />
-            <a href="https://img-blog.csdnimg.cn/f7b14fe02241434baaed687065479045.png"><span>点击【小红书】</span></a><br />
-            <a href="https://media.om.qq.com/author?id=MqnvyVClU3TriUji4gP9_bvg0"><span>点击【企鹅号】</span></a><br />
-            <a href="https://author.baidu.com/home?context=%7B%22app_id%22%3A%221678622734462341%22%7D&amp;wfr=bjh"><span>点击【百家号】</span></a><br />
-            <a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
-            <a href="https://mp.sohu.com/profile?xpt=ZTJlYWY3YzgtNzZmYi00NTljLTkwZjgtNGM4NmNhNDQxODVj"><span>点击【搜狐号】</span></a><br />
-            <a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
-            <a href="https://www.360kuai.com/pc/zmt?id=3001713896"><span>点击【快传号】</span></a><br />
-            <a href="https://www.163.com/dy/media/T1624158133120.html"><span>点击【网易号】</span></a><br />
-            <a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
-            <a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
-            <a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
-            <a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
-            <a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
-            <a href="https://juejin.cn/user/3290187978253431"><span>点击【稀土掘金】</span></a><br />
-            <a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
-            <a href="https://weibo.com/u/6435818513"><span>点击【新浪微博】</span></a><br />
-            <a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
-            <a href="https://tieba.baidu.com/home/main?un=%E8%B8%8F%E7%A0%B4%E5%A4%A9%E5%A4%A9"><span>点击【百度贴吧】</span></a><br />
-            <a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
-            <a href="http://www.mark-to-win.com/TeacherV2.html?id=34"><span>点击【马克Java社区】</span></a><br />
-            <a href="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg"><span>点击【微信公众号】</span></a><br />
+            🍊<a href="https://www.liaozhiwei.cn/"><span>点击【主页】</span></a><br />
+            🍊<a href="https://gitee.com/java_wxid/java_wxid"><span>点击【项目】</span></a><br />
+            🍊<a href="https://bbs.csdn.net/forums/liaozhiwei"><span>点击【社区】</span></a><br />
+            🍊<a href="https://www.yuque.com/java_wxid"><span>点击【语雀】</span></a><br />
+            🍊<a href="https://gitee.com/java_wxid"><span>点击【码云】</span></a><br />
+            🍊<a href="https://www.zhihu.com/people/java_wxid"><span>点击【知乎】</span></a><br />
+            🍊<a href="https://segmentfault.com/u/java_wxid"><span>点击【思否】</span></a><br />
+            🍊<a href="https://www.jianshu.com/u/291aeb531f8b"><span>点击【简书】</span></a><br />
+            🍊<a href="https://v.kuaishou.com/hx84Bn"><span>点击【快手】</span></a><br />
+            🍊<a href="https://www.douyin.com/user/MS4wLjABAAAAymuW4SDeeylSFzL8oUMvVn50FY4X37UOeUBJB27dcv0"><span>点击【抖音】</span></a><br />
+            🍊<a href="https://blog.csdn.net/Java_programmer_liao"><span>点击【CSDN】</span></a><br />
+            🍊<a href="https://cloud.tencent.com/developer/user/5598481"><span>点击【腾讯云】</span></a><br />
+            🍊<a href="https://developer.aliyun.com/profile/yt5hnoa7p5vi2"><span>点击【阿里云】</span></a><br />
+            🍊<a href="https://bbs.huaweicloud.com/community/usersnew/id_1640920880921267"><span>点击【华为云】</span></a><br />
+            🍊<a href="https://www.cnblogs.com/liaozhiwei/"><span>点击【博客园】</span></a><br />
+            🍊<a href="https://img-blog.csdnimg.cn/f7b14fe02241434baaed687065479045.png"><span>点击【小红书】</span></a><br />
+            🍊<a href="https://media.om.qq.com/author?id=MqnvyVClU3TriUji4gP9_bvg0"><span>点击【企鹅号】</span></a><br />
+            🍊<a href="https://author.baidu.com/home?context=%7B%22app_id%22%3A%221678622734462341%22%7D&amp;wfr=bjh"><span>点击【百家号】</span></a><br />
+            🍊<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
+            🍊<a href="https://mp.sohu.com/profile?xpt=ZTJlYWY3YzgtNzZmYi00NTljLTkwZjgtNGM4NmNhNDQxODVj"><span>点击【搜狐号】</span></a><br />
+            🍊<a href="http://a.mp.uc.cn/media?mid=d63d204da4c4410ab897f12e10c50437"><span>点击【大鱼号】</span></a><br />
+            🍊<a href="https://www.360kuai.com/pc/zmt?id=3001713896"><span>点击【快传号】</span></a><br />
+            🍊<a href="https://www.163.com/dy/media/T1624158133120.html"><span>点击【网易号】</span></a><br />
+            🍊<a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
+            🍊<a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
+            🍊<a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
+            🍊<a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
+            🍊<a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
+            🍊<a href="https://juejin.cn/user/3290187978253431"><span>点击【稀土掘金】</span></a><br />
+            🍊<a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
+            🍊<a href="https://weibo.com/u/6435818513"><span>点击【新浪微博】</span></a><br />
+            🍊<a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
+            🍊<a href="https://tieba.baidu.com/home/main?un=%E8%B8%8F%E7%A0%B4%E5%A4%A9%E5%A4%A9"><span>点击【百度贴吧】</span></a><br />
+            🍊<a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
+            🍊<a href="http://www.mark-to-win.com/TeacherV2.html?id=34"><span>点击【马克Java社区】</span></a><br />
+            🍊<a href="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg"><span>点击【微信公众号】</span></a><br />
         </section>
 
 
@@ -190,7 +190,7 @@
             <hr/>
             <ul>
                 <li><span>
-                            我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、幕后大佬社区创始人、开源导航与开源项目贡献者、B站UP主等头衔。
+                            我是🌟廖志伟🌟，一名🎉Java资深开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉等头衔。
                             拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
                             消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域启动DDD、
                             Apache Spark大数据分析引擎、HDFS高吞吐量的分布式文件系统存储，Hive类SQL的引擎、HBase在Hadoop之上的NoSQL的Key/vale数据库。
@@ -208,82 +208,86 @@
             <ul>
                 <li>
                     <span>
-				        具备扎实的Java基础，操作系统与虚拟机底层，CPU缓存一致性协议MESI、Fail-safe机制/Fail-fast机制、深拷贝和浅拷贝、伪共享、网络四元组、HTTP协议、TCPIP协议、OAUTH2协议。常见算法/数据结构（Bloom Filter、Hash、Bit-map、分而治之思想、堆排序）。
-                        熟练掌握集合、JVM内存模型、内存屏障、happens-before和as-if-serial语义、类加载机制、双亲委派、垃圾回收算法、垃圾回收器、空间分配担保策略、安全点与安全区域、记忆集与卡表、JIT技术、可达性分析、强软弱虚引用、GC的过程、三色标记、跨代引用、逃逸分析、内存泄漏与溢出、
+				        📝具备扎实的Java基础，操作系统与虚拟机底层，CPU缓存一致性协议MESI、Fail-safe机制/Fail-fast机制、深拷贝和浅拷贝、伪共享、网络四元组、HTTP协议、TCPIP协议、OAUTH2协议。常见算法/数据结构（Bloom Filter、Hash、Bit-map、分而治之思想、堆排序）。
+                    </span>
+                </li>
+                <li>
+                    <span>
+				        📝熟练掌握集合、JVM内存模型、内存屏障、happens-before和as-if-serial语义、类加载机制、双亲委派、垃圾回收算法、垃圾回收器、空间分配担保策略、安全点与安全区域、记忆集与卡表、JIT技术、可达性分析、强软弱虚引用、GC的过程、三色标记、跨代引用、逃逸分析、内存泄漏与溢出、
                         class文件结构、虚拟机字节码执行引擎、栈帧局部变量表、栈帧操作数栈、动态连接、方法返回地址、方法调用（解析与分派）、有过JVM线上调优、OOM异常排查经验。
                     </span>
                 </li>
                 <li>
                     <span>
-				        深入理解Synchronized关键字，ThreadLocal，volatile关键字，线程的生命周期、CompletableFuture事件驱动异步回调、CountDownLatch&CyclicBarrier&Semaphore应用与原理，AtomicReference原子引用&AtomicInteger原子整型，CompareAndSwap底层原理，
+				        📝深入理解Synchronized关键字，ThreadLocal，volatile关键字，线程的生命周期、CompletableFuture事件驱动异步回调、CountDownLatch&CyclicBarrier&Semaphore应用与原理，AtomicReference原子引用&AtomicInteger原子整型，CompareAndSwap底层原理，
                         Executor线程池原理与源码、Lock锁的使用与原理。深入理解同步器AQS，阻塞队列BlockingQueue&非阻塞队列ConcurrentLinkedQueue&同步队列SyncQueue，Future&ForkJoin框架原理，无锁并发框架Disruptor等并发编程相关技术。
                     </span>
                 </li>
                 <li>
                     <span>
-				        深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。
+				        📝深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。
                     </span>
                 </li>
                 <li>
 					<span>
-				        深入理解MySQL关系型数据库： InnoDB数据页结构、CheckPoint技术、AIO与刷新邻接页、行记录格式（Compact、Redundant、Compressed、Dynamic）、Named File Formats机制、表空间（段、区、页）、约束、视图、分区表、BufferPool缓存机制、filesort过程、离散读优化、
+				        📝深入理解MySQL关系型数据库： InnoDB数据页结构、CheckPoint技术、AIO与刷新邻接页、行记录格式（Compact、Redundant、Compressed、Dynamic）、Named File Formats机制、表空间（段、区、页）、约束、视图、分区表、BufferPool缓存机制、filesort过程、离散读优化、
                         ICP优化、MRR优化、全文检索、行锁、表锁、间隙锁、死锁、主键自增长实现原理、索引数据结构、SQL优化、索引失效的几种情况、聚集索引、辅助索引、覆盖索引、联合索引、FIC、OSC、Online DDL、Cardinality值、redo log、bin log、undolog、Group Commint、隔离级别、
                         ACID底层实现原理、一致性非锁定读（MVCC的原理）、分布式事务、内部事务、SQL的执行流程、缓冲池、管理方式、重做日志刷盘策略、有MySQL调优、Apache ShardingSphere分库分表读写分离、主从复制工作原理、MySQL InnoDB Cluster高可用经验、冷备、热备、逻辑备。
 					</span>
 				</li>
                 <li>
                     <span>
-                        深入理解Redis缓存： 多路复用模式、单线程模型、简单字符串、链表、字典、跳跃表、压缩列表、encoding属性编码、持久化、布隆过滤器、分布式寻址算法、过期策略、内存淘汰策略、Redis与数据库的数据一致性、Redis分布式锁、热点数据缓存、哨兵模式、集群模式、
+                        📝深入理解Redis缓存： 多路复用模式、单线程模型、简单字符串、链表、字典、跳跃表、压缩列表、encoding属性编码、持久化、布隆过滤器、分布式寻址算法、过期策略、内存淘汰策略、Redis与数据库的数据一致性、Redis分布式锁、热点数据缓存、哨兵模式、集群模式、
                         多级缓存架构、并发竞争、主从架构等。 具有集群架构及高可用相关经验、熟悉各种缓存高并发的 使用场景如：缓存雪崩、缓存穿透、缓存失效。
                     </span>
                 </li>
 
                 <li>
                     <span>
-				        熟悉掌握 RabbitMQ、RockerMQ、Kafka 消息中间件、解决过各种消息通讯场景的疑难问题。对于以上三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题都有着不错的实战解决方案。 
+				        📝熟悉掌握 RabbitMQ、RockerMQ、Kafka 消息中间件、解决过各种消息通讯场景的疑难问题。对于以上三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题都有着不错的实战解决方案。 
                     </span>
                 </li>
 
                 <li>
                     <span>
-                            深入理解Spring、Spring MVC、Mybatis、Spring Boot、Dubbo等开源框架的设计原理以及底层架构、研究过Spring循环依赖源码、Spring容器启动过程源码、Spring事务源码、Bean生命周期源码、Spring事务底层实现原理、Ioc容器加载过程源码、
+                        📝深入理解Spring、Spring MVC、Mybatis、Spring Boot、Dubbo等开源框架的设计原理以及底层架构、研究过Spring循环依赖源码、Spring容器启动过程源码、Spring事务源码、Bean生命周期源码、Spring事务底层实现原理、Ioc容器加载过程源码、
                             AOP底层实现、SpringMVC执行流程源码、Spring的自动装配、Spring Boot自动装配、MyBatis的数据过操作过程源码、SQL操作执行流程源码、配置文件解析源码、Spring Boot自动装配核心源码、Dubbo服务引入与导出以及调用源码。
                     </span>
                 </li>
                 <li>
                     <span>
-                           深入理解Spring Cloud分布式微服务架构：微服务构建、客户端负载均衡、服务治理、服务容错保护、声明式服务调用、API网关服务、分布式配置中心、消息总线、消息驱动、分布式服务追踪、分布式事务、流量控制。研究过Alibaba Nacos注册中心源码、
+                           📝深入理解Spring Cloud分布式微服务架构：微服务构建、客户端负载均衡、服务治理、服务容错保护、声明式服务调用、API网关服务、分布式配置中心、消息总线、消息驱动、分布式服务追踪、分布式事务、流量控制。研究过Alibaba Nacos注册中心源码、
                             Sentinel规则持久化源码、分布式事务组件Seata内核源码。
                     </span>
                 </li>
                 <li>
                     <span>
-                           深入理解Zookeeper：特性与节点数据类型、典型使用场景、选举Leader源码、集群ZAB协议与Watcher监听机制源码等。
+                           📝深入理解Zookeeper：特性与节点数据类型、典型使用场景、选举Leader源码、集群ZAB协议与Watcher监听机制源码等。
                     </span>
                 </li>
                 <li>
                     <span>
-                            深入理解ElasticSearch：核心语法、倒排索引、底层原理与分组聚合查询、具备集群高可用实战经验、集群架构原理与搜索技术深入、Java API整合ElasticSearch以及Logstash、FileBeat使用等。
+                            📝深入理解ElasticSearch：核心语法、倒排索引、底层原理与分组聚合查询、具备集群高可用实战经验、集群架构原理与搜索技术深入、Java API整合ElasticSearch以及Logstash、FileBeat使用等。
                     </span>
                 </li>
                 <li>
                     <span>
-                            深入理解MongoDB：基本原理、聚合操作及索引底层原理、集群模式及应用实战。
+                            📝深入理解MongoDB：基本原理、聚合操作及索引底层原理、集群模式及应用实战。
                     </span>
                 </li>
                 <li>
                     <span>
-                            熟练使用Apache Spark作为基于内存计算的大数据分析引擎用于批处理、交互式查询。ETL工具将数据源抽取到HDFS作为高可靠、高吞吐量的分布式文件系统存储，通过Hive清洗、处理和计算原始数据，Hive清洗处理后的结果，将存入Hbase，海量数据随机查询场景从HBase查询数据。
+                            📝熟练使用Apache Spark作为基于内存计算的大数据分析引擎用于批处理、交互式查询。ETL工具将数据源抽取到HDFS作为高可靠、高吞吐量的分布式文件系统存储，通过Hive清洗、处理和计算原始数据，Hive清洗处理后的结果，将存入Hbase，海量数据随机查询场景从HBase查询数据。
                     </span>
                 </li>
                 <li>
                     <span>
-                            深入理解各种高性能IO通信模型以及Netty底层数据交互源码、理解NIO与Netty线程模型有过深入研究、深入Hotspot源码与Linux内核、熟悉百万级并发服务器架构的设计。
+                            📝深入理解各种高性能IO通信模型以及Netty底层数据交互源码、理解NIO与Netty线程模型有过深入研究、深入Hotspot源码与Linux内核、熟悉百万级并发服务器架构的设计。
                     </span>
                 </li>
                 <li>
                     <span>
-				        熟练使用设计模式：支付场景：策略模式 + 工厂模式 + 门面模式 + 单例模式；
+				        📝熟练使用设计模式：支付场景：策略模式 + 工厂模式 + 门面模式 + 单例模式；
                             业务投放场景：责任链模式；
                             平台积分红包发放场景：装饰者模式；
                             订单状态场景：状态模式+观察者模式；
@@ -295,13 +299,13 @@
                 </li>
                 <li>
                     <span>
-                        能独立或带领团队Java工程师成员完成服务端代码的研发工作，结合业务需求给出合理的技术解决方案，改进现有模块功能，提高系统的可扩展性，封装性，稳定性。深入挖掘业务需求，可0-1设计高可用、高并发、高伸缩的分布式项目架构，环境搭建、自动化部署、服务器环境线上排查、性能评估相关经验。
+                        📝能独立或带领团队Java工程师成员完成服务端代码的研发工作，结合业务需求给出合理的技术解决方案，改进现有模块功能，提高系统的可扩展性，封装性，稳定性。深入挖掘业务需求，可0-1设计高可用、高并发、高伸缩的分布式项目架构，环境搭建、自动化部署、服务器环境线上排查、性能评估相关经验。
                         具备Linux常用命令、Docker容器化、本地镜像仓库、GitLab私服、Jenkins自动化部署等技术。
                     </span>
                 </li>
                 <li>
                     <span>
-                        拥有产品需求讨论、任务分配、Code审查、负责指导、培训普通开发工程师、审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。
+                        📝拥有产品需求讨论、任务分配、Code审查、负责指导、培训普通开发工程师、审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。
                     </span>
                 </li>
             </ul>
@@ -331,6 +335,9 @@
             <p>打通36个新媒体平台（已达成）</p>
             <p>资深开发工程师（已达成）</p>
             <p>Java领域优质创作者（已达成）</p>
+            <p>文章创作超过六百篇（已达成）</p>
+            <p>文章访问量超过一百万（已达成）</p>
+            <p>文章收藏次数超过一万（已达成）</p>
         </section>
 
         <!-- 未达成的目标 -->
@@ -338,9 +345,13 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>未达成的目标</h2>
             <hr/>
-            <p>还清老家的房贷</p>
-            <p>有个爱我的妻子</p>
+            <p>文章评论次数超过一万</p>
+            <p>文章点赞次数超过一万</p>
+            <p>CSDN全站排名前一百名</p>
+            <p>java_wxid项目成为GVP</p>
             <p>图灵学院课程学完</p>
+            <p>还清老家的房贷</p>
+            <p>娶个媳妇生个娃</p>
             <p>独立出版专业书籍</p>
             <p>一线城市购置房产</p>
             <p>实现个人财富自由</p>
