--- a/index.html
+++ b/index.html
@@ -208,7 +208,13 @@
             <ul>
                 <li>
                     <span>
-				        📝具备扎实的Java基础，操作系统与虚拟机底层，CPU缓存一致性协议MESI、Fail-safe机制/Fail-fast机制、深拷贝和浅拷贝、伪共享、网络四元组、HTTP协议、TCPIP协议、OAUTH2协议。常见算法/数据结构（Bloom Filter、Hash、Bit-map、分而治之思想、堆排序）。
+				        📝具备扎实的Java基础，操作系统与虚拟机底层，CPU缓存一致性协议MESI、HTTP协议、TCPIP协议、OAUTH2协议、Fail-safe机制/Fail-fast机制、深拷贝和浅拷贝、伪共享、网络四元组。
+                    </span>
+                </li>
+                <li>
+                    <span>
+				        📝熟悉数据结构：数组（BaseArray、Vector）、链表（ArrayList、LinkedList、DoubleLinkedList）、栈（ArrayStack、ListStack、LinkedListStack）、队列（Queue、PrioritQueue）、树论基础与二叉树、二叉搜索树与红黑树、Btree树、Trie树、赫夫曼树、堆树、图论基础、最短路径。
+                            算法思想：排序算法（冒泡排序、选择排序、插入排序、希尔排序、归并排序、快速排序、计数排序、基数排序）、基础数论、枚举算法、递归算法、分治算法、回溯算法、贪心算法、动态规划、二分与HashMap、HashSet与TreeSet。
                     </span>
                 </li>
                 <li>
@@ -244,7 +250,9 @@
 
                 <li>
                     <span>
-				        📝熟悉掌握 RabbitMQ、RockerMQ、Kafka 消息中间件、解决过各种消息通讯场景的疑难问题。对于以上三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题都有着不错的实战解决方案。 
+				        📝RabbitMQ、RockerMQ、Kafka 三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题的解决方案。RabbitMQ的工作模式，RocketMQ的消息类型，Kafka消费模式、主题/分区/日志、核心总控制器以及它的选举机制、
+                            Partition副本选举Leader机制、消费者消费消息的offset记录机制、消费者Rebalance机制、Rebalance分区分配策略、Rebalance过程、 producer发布消息机制、HW与LEO、日志分段存储、十亿消息数据线上环境规划、JVM参数设置。
+
                     </span>
                 </li>
 
@@ -305,7 +313,7 @@
                 </li>
                 <li>
                     <span>
-                        📝拥有产品需求讨论、任务分配、Code审查、负责指导、培训普通开发工程师、审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。
+                        📝拥有产品需求讨论、项目开发计划制定、控制项目风险、负责技术小组日常管理工作、进度检验与管理、任务分配、Code审查、负责指导、培训普通开发工程师、代码review、审核开发工程师的设计与研发质量等经验。具备需求分析、文档编写、原型设计等基本的文档输出能力。
                     </span>
                 </li>
             </ul>
