--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </li>
                 <li>
                     <label><b>现居</b></label>
-                    <span>上海静安</span>
+                    <span>上海</span>
                 </li>
                 <li>
                     <label><b>家乡</b></label>
@@ -354,11 +354,23 @@
                 <li>
             <p>个人社区（已达成）</p>
                 </li>
+		<li>
+            <p>文章创作超过六百篇（已达成）</p>
+                </li>
+                <li>
+            <p>文章访问量超过一百万（已达成）</p>
+                </li>
+                <li>
+            <p>文章收藏次数超过一万（已达成）</p>
+                </li>
+		<li>
+                    <p>文章评论次数超过一万</p>
+                </li>    
                 <li>
             <p>CSDN博客专家（已达成）</p>
                 </li>
                 <li>
-            <p>51cto专家博主（已达成）</p>
+            <p>51CTO专家博主（已达成）</p>
                 </li>
                 <li>
             <p>技术粉丝过万（已达成）</p>
@@ -372,15 +384,6 @@
                 <li>
             <p>Java领域优质创作者（已达成）</p>
                 </li>
-                <li>
-            <p>文章创作超过六百篇（已达成）</p>
-                </li>
-                <li>
-            <p>文章访问量超过一百万（已达成）</p>
-                </li>
-                <li>
-            <p>文章收藏次数超过一万（已达成）</p>
-                </li>
             </ul>
         </section>
 
@@ -390,9 +393,6 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>未达成的目标</h2>
             <hr/>
             <ul>
-                <li>
-                    <p>文章评论次数超过一万</p>
-                </li>
                 <li>
                     <p>文章点赞次数超过一万</p>
                 </li>
