--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             <p>文章收藏次数超过一万（已达成）</p>
                 </li>
 		<li>
-                    <p>文章评论次数超过一万</p>
+                    <p>文章评论次数超过一万（已达成）</p>
                 </li>    
                 <li>
             <p>CSDN博客专家（已达成）</p>
