--- a/index.html
+++ b/index.html
@@ -190,10 +190,9 @@
             <hr/>
             <ul>
                 <li><span>
-                            我是🌟廖志伟🌟，一名🎉Java资深开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉等头衔。
+                            我是🌟廖志伟🌟，一名🎉Java高级开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉阿里云专家博主🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉、🎉清华出版社作者🎉等头衔。
                             拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
-                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、
-                            Apache Spark大数据分析引擎、HDFS高吞吐量的分布式文件系统存储，Hive类SQL的引擎、HBase大数据非关系型数据库。
+                            消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
                     </span>
                 </li>
             </ul>
@@ -364,7 +363,7 @@
             <p>文章收藏次数超过一万（已达成）</p>
                 </li>
 		<li>
-                    <p>文章评论次数超过一万（已达成）</p>
+            <p>文章评论次数超过一万（已达成）</p>
                 </li>    
                 <li>
             <p>CSDN博客专家（已达成）</p>
@@ -373,13 +372,16 @@
             <p>51CTO专家博主（已达成）</p>
                 </li>
                 <li>
+                    <p>阿里云专家博主（已达成）</p>
+                </li>
+                <li>
             <p>技术粉丝过万（已达成）</p>
                 </li>
                 <li>
             <p>打通36个新媒体平台（已达成）</p>
                 </li>
                 <li>
-            <p>资深开发工程师（已达成）</p>
+            <p>高级开发工程师（已达成）</p>
                 </li>
                 <li>
             <p>Java领域优质创作者（已达成）</p>
@@ -394,31 +396,28 @@
             <hr/>
             <ul>
                 <li>
-                    <p>文章点赞次数超过一万</p>
+                    <p>文章点赞次数超过一万（9,121/10000）</p>
                 </li>
                 <li>
-                    <p>CSDN全站排名前一百名</p>
+                    <p>CSDN全站排名前一百名（最靠近的一次是134名）</p>
                 </li>
                 <li>
-                    <p>java_wxid项目成为GVP</p>
+                    <p>社交类APP研发成功（研发中）</p>
                 </li>
                 <li>
-                    <p>图灵学院课程学完</p>
+                    <p>图灵学院课程学完（架构师课程学了大半了）</p>
                 </li>
                 <li>
-                    <p>还清老家的房贷</p>
+                    <p>还清老家的房贷（还有五十万房贷）</p>
                 </li>
                 <li>
-                    <p>娶个媳妇生个娃</p>
+                    <p>娶个媳妇生个娃（单身求偶状态）</p>
                 </li>
                 <li>
-                    <p>独立出版专业书籍</p>
+                    <p>独立出版专业书籍（写书中）</p>
                 </li>
                 <li>
-                    <p>一线城市购置房产</p>
-                </li>
-                <li>
-                    <p>实现个人财富自由</p>
+                    <p>实现个人财富自由（还在做梦）</p>
                 </li>
             </ul>
         </section>
