--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </li>
                 <li>
                     <label><b>职业</b></label>
-                    <span>Java资深开发工程师</span>
+                    <span>Java高级开发工程师</span>
                 </li>
                 <li>
                     <label><b>CSDN</b></label>
@@ -190,7 +190,7 @@
             <hr/>
             <ul>
                 <li><span>
-                            我是🌟廖志伟🌟，一名🎉Java高级开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉阿里云专家博主🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉、🎉清华出版社作者🎉等头衔。
+                            我是🌟廖志伟🌟，一名🎉Java高级开发工程师🎉、🎉Java领域优质创作者🎉、🎉CSDN博客专家🎉、🎉阿里云专家博主🎉、🎉51CTO专家博主🎉、🎉幕后大佬社区创始人🎉、🎉开源导航与开源项目贡献者🎉、🎉B站UP主🎉、🎉清华出版社作者🎉、🎉淘宝店家🎉、🎉软件公司创始人🎉、🎉Java课程讲师🎉等头衔。
                             拥有多年一线研发经验，参与并主导过多个互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，
                             消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、ElasticSearch全文搜索、MongoDB非关系型数据库、分库分表ShardingSphere、设计模式、领域驱动DDD、K8S集群管理。
                     </span>
@@ -317,33 +317,6 @@
                 </li>
             </ul>
         </section>
-        <!-- 自我评价 -->
-        <section class="work info-unit">
-            <h2>
-                <i class="fa fa-pencil" aria-hidden="true"></i>自我评价/期望</h2>
-            <hr/>
-            <ul>
-                <li>
-                    <p>有良好的沟通，团队协作能力，工作主动，耐心强，责任心、执行力及抗压性强。</p>
-                </li>
-                <li>
-                    <p>自律，爱学习，认真，有目标感，有使命感，努力，上进，主人翁意识。</p>
-                </li>
-                <li>
-                    <p>为人诚恳，待人真诚，以更包容开放的心态，观人、待事、接物。</p>
-                </li>
-                <li>
-                    <p>懂得克制自己，学会掌控人性里的欲望，抵得住花花世界的诱惑。</p>
-                </li>
-                <li>
-                    <p>不把时间浪费在无意义的社交上，不把精力消耗在无关紧要的人身上。</p>
-                </li>
-                <li>
-                    <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
-                </li>
-            </ul>
-        </section>
-
         <!-- 已达成的目标 -->
         <section class="work info-unit">
             <h2>
@@ -351,7 +324,7 @@
             <hr/>
             <ul>
                 <li>
-            <p>个人社区（已达成）</p>
+            <p>个人社区（幕后大佬）（已达成）</p>
                 </li>
 		<li>
             <p>文章创作超过六百篇（已达成）</p>
@@ -381,7 +354,7 @@
             <p>打通36个新媒体平台（已达成）</p>
                 </li>
                 <li>
-            <p>高级开发工程师（已达成）</p>
+            <p>Java高级开发工程师（已达成）</p>
                 </li>
                 <li>
             <p>Java领域优质创作者（已达成）</p>
@@ -421,6 +394,30 @@
                 </li>
             </ul>
         </section>
+	    
+	<!-- 待提升的技能 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>待提升的技能</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>爱好：跑步、羽毛球、健身、唱歌、绘画、街舞、表演、辩论、音乐、摄影、剪辑</p>
+                </li>
+                <li>
+                    <p>提升专业知识、职业技能、英语技能、沟通能力、耐心、学习前端知识做全栈开发</p>
+                </li>
+                <li>
+                    <p>减脂、练腹肌、胸肌、肱二头肌、练腰、练核心力量</p>
+                </li>
+                <li>
+                    <p>养胃、养肝、养肾、护眼、护肤</p>
+                </li>
+                <li>
+                    <p>多接触异性、多和高层次人群交流、提升眼界</p>
+                </li>
+            </ul>
+        </section>
 
         <!-- 兴趣爱好 -->
         <section class="work info-unit">
@@ -429,22 +426,49 @@
             <hr/>
             <ul>
                 <li>
-                    <p>喜欢的运动：乒乓球，篮球，羽毛球</p>
+                    <p>喜欢的运动：乒乓球、篮球、羽毛球、跑步、健身</p>
                 </li>
                 <li>
-                    <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
+                    <p>喜欢的小说：斗罗大陆、三体、三寸人间、求魔</p>
                 </li>
                 <li>
-                    <p>喜欢的动漫：超神学院，秦时明月，画江湖</p>
+                    <p>喜欢的动漫：超神学院、秦时明月、画江湖、吞噬星空</p>
                 </li>
                 <li>
-                    <p>喜欢的游戏：王者荣耀，QQ飞车，穿越火线</p>
+                    <p>喜欢的游戏：王者荣耀、QQ飞车、绝地求生、部落冲突</p>
                 </li>
                 <li>
-                    <p>喜欢的歌手：林俊杰，周杰伦，Taylor Swift</p>
+                    <p>喜欢的歌手：林俊杰、周杰伦、Taylor Swift、薛之谦</p>
                 </li>
                 <li>
-                    <p>喜欢的电影：漫威系列，DC系列，速度与激情系列</p>
+                    <p>喜欢的电影：漫威系列、DC系列、速度与激情系列、吸血鬼日记</p>
+                </li>
+            </ul>
+        </section>
+	    
+	            <!-- 自我评价 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>自我评价/期望</h2>
+            <hr/>
+            <ul>
+                <li>
+                    <p>有良好的沟通，团队协作能力，工作主动，耐心强，责任心、执行力及抗压性强。</p>
+                </li>
+                <li>
+                    <p>自律，爱学习，认真，有目标感，有使命感，努力，上进，主人翁意识。</p>
+                </li>
+                <li>
+                    <p>为人诚恳，待人真诚，以更包容开放的心态，观人、待事、接物。</p>
+                </li>
+                <li>
+                    <p>懂得克制自己，学会掌控人性里的欲望，抵得住花花世界的诱惑。</p>
+                </li>
+                <li>
+                    <p>不把时间浪费在无意义的社交上，不把精力消耗在无关紧要的人身上。</p>
+                </li>
+                <li>
+                    <p>勇于面对困难，迎接挑战，乐于学习新的知识，并对未来有充足的信心。</p>
                 </li>
             </ul>
         </section>
@@ -454,14 +478,14 @@
 
 <footer class="footer">
     <p>© 2017 廖志伟.文档最后更新时间为
-        <time>2022年10月03日</time>.</p>
+        <time>2023年03月01日</time>.</p>
 </footer>
 
 <!-- 侧栏 -->
 <aside>
     <ul>
         <li>
-            <a href="https://java_wxid.gitee.io/liao-zhiwei" target="_blank">主页</a>
+            <a href="https://www.liaozhiwei.cn/" target="_blank">主页</a>
         </li>
     </ul>
 </aside>
